Fixed some layouts

--- a/index.html
+++ b/index.html
@@ -159,5 +159,27 @@
         </section>
       </main>
     </div>
+
+    <footer>
+      <div class="attribution-wrapper">
+        <p class="attribution">
+          Coded by
+          <a
+            class="attb-link"
+            href="https://twitter.com/CodePapa360"
+            target="_blank"
+            >Alamin</a
+          >
+          <br />
+          Challenge by
+          <a
+            class="attb-link attb-fem"
+            href="https://www.frontendmentor.io/profile/CodePapa360"
+            target="_blank"
+            >Frontend Mentor</a
+          >
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
