Updated readmme and meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta
+      property="og:title"
+      content="Results summary component | Frontend Mentor | Alamin"
+    />
+    <meta
+      name="description"
+      content="Check out my solution for the FrontendMentor Results Summary Component challenge - a responsive web page with a dark mode toggle feature built with HTML, CSS, and JavaScript."
+    />
+    <meta
+      property="og:description"
+      content="Check out my solution for the FrontendMentor Results Summary Component challenge - a responsive web page with a dark mode toggle feature built with HTML, CSS, and JavaScript."
+    />
+    <meta property="og:image" content="" />
+    <meta property="og:url" content="" />
+    <meta name="author" content="Alamin | codpapa360" />
+    <meta
+      name="keywords"
+      content="FrontendMentor, Results Summary Component, Responsive web design, HTML, CSS, JavaScript, Sass, Dark mode toggle feature, Front-end development, User experience, Accessibility"
+    />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Results summary component | Frontend Mentor | Alamin"
+    />
+    <meta name="twitter:site" content="@" />
+    <meta
+      name="twitter:description"
+      content="Check out my solution for the FrontendMentor Results Summary Component challenge - a responsive web page with a dark mode toggle feature built with HTML, CSS, and JavaScript."
+    />
+    <meta name="twitter:image" content="" />
+    <meta
+      name="twitter:image:alt"
+      content="Results summary component | Frontend Mentor | Alamin"
+    />
+
     <link
       rel="icon"
       type="image/png"
