--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
       property="og:description"
       content="Check out my solution for the FrontendMentor Results Summary Component challenge - a responsive web page with a dark mode toggle feature built with HTML, CSS, and JavaScript."
     />
-    <meta property="og:image" content="" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/CodePapa360/Results-summary-component/main/screenshots/Screenshot%20compared%20-%20Frontend%20Mentor%20Results%20summary%20component.png"
+    />
     <meta property="og:url" content="" />
     <meta name="author" content="Alamin | codpapa360" />
     <meta
@@ -34,7 +37,10 @@
       name="twitter:description"
       content="Check out my solution for the FrontendMentor Results Summary Component challenge - a responsive web page with a dark mode toggle feature built with HTML, CSS, and JavaScript."
     />
-    <meta name="twitter:image" content="" />
+    <meta
+      name="twitter:image"
+      content="https://raw.githubusercontent.com/CodePapa360/Results-summary-component/main/screenshots/Screenshot%20compared%20-%20Frontend%20Mentor%20Results%20summary%20component.png"
+    />
     <meta
       name="twitter:image:alt"
       content="Results summary component | Frontend Mentor | Alamin"
