Updated readmme and meta tags

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
       property="og:image"
       content="https://raw.githubusercontent.com/CodePapa360/Results-summary-component/main/screenshots/Screenshot%20compared%20-%20Frontend%20Mentor%20Results%20summary%20component.png"
     />
-    <meta property="og:url" content="" />
+    <meta
+      property="og:url"
+      content="https://result-summary-alamin.netlify.app/"
+    />
     <meta name="author" content="Alamin | codpapa360" />
     <meta
       name="keywords"
@@ -32,7 +35,10 @@
       name="twitter:title"
       content="Results summary component | Frontend Mentor | Alamin"
     />
-    <meta name="twitter:site" content="@" />
+    <meta
+      name="twitter:site"
+      content="@https://result-summary-alamin.netlify.app/"
+    />
     <meta
       name="twitter:description"
       content="Check out my solution for the FrontendMentor Results Summary Component challenge - a responsive web page with a dark mode toggle feature built with HTML, CSS, and JavaScript."
